--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<title>Ted Karanikolas' Resume</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="oldstylesheet.css">
 </head>
 
 <body>
